fixed font alignment in list items

--- a/styles/style.css
+++ b/styles/style.css
@@ -170,16 +170,17 @@ input#item[type=text] {
 }
 
 span.list_item {
-	border:1px solid black;
+	border: 1px solid black;
 	background-color: white;
 	border-radius: 10px;
 	width: 100%;
-	height: 25px;
-	padding: 3px 10px;
+	height: 23px;
+	padding: 5px 5px 2px 9px;
 	font-family: sans-serif;
 	font-size: 1.1em;
 	font-weight: 600;
 	letter-spacing: 1px;
+
 }
 
 .stars {
@@ -195,21 +196,7 @@ img {
 }
 
 
-/* good spacing for list items with font centered. Use if not using paragraph elements in spans
 
-span.list_item {
-border: 1px solid black;
-background-color: white;
-border-radius: 10px;
-width: 100%;
-height: 23px;
-padding: 5px 5px 2px 9px;
-font-family: sans-serif;
-font-size: 1.1em;
-font-weight: 600;
-letter-spacing: 1px;
-
-*/
 
 
 
